LIST OF CHANGES
---------------

 - run_is_deletable script moved to this package from data_handling
 - remove remaining broken provisions for xml LIMs driver 
 - use the new log publisher

release 51.11.0
 - added support for RNA analysis/quantification using STAR and salmon
 - STAR alignment jobs get more memory using bmod after seq_alignment jobs have been submitted.
 - removed unneeded coordinate sort and duplicate marking when there is no alignment to a target reference

release 51.10.3
 - no alignments for chromium libraries
 - seq_alignment to do_rna analysis regardless of the organism specified (other conditions stay in place)

release 51.10.2
 - use bwa aln for human split with tophat target alignment

release 51.10.1
 - Modified qc run function list, removed copy_interop and switched archive_to_irods to samplesheet
 
release 51.10
 - Chained execution of RNA-SeQC to the vtfp/viv alignment cmd for RNA-Seq libraries only:
     entries for qc check rna_seqc removed from central function and parallelisation.
     code that created rna_seqc-specific directories has been removed as this is
     now handled by the check itself using qc_out arg.
 - remove GCLP-specific code and configuration files
 - remove unused force_p4 attribute
 - OLB analysis removed
 - recalibration removed
 - pb_cal_path and dif_files_path accessors disabled
 - allow p4 stage 1 to analyse runs with different length reads
 - illumina2bam function removed
 - update p4 stage 2 (seq_alignment) warn rather than croak if multiple references for tag 0
 - update p4 stage 2 (seq_alignment) to use bambi chrsplit instead of SplitBamByChromosomes.jar for Y-split runs
 - pipeline scripts - redirect stderr output to the log to capture output from all
   NPG and CPAN modules in one place

release 51.9
 - p4stage2 speed-up by caching references
 - p4stage2 errors in getting a reference made fatal
 - iRODS publish script new options: (1) --restart_file to pin the script's